Added some dummy code

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Test title</title>
 </head>
 
 <body>
+  <main>
+    here is where you could write some code and see what it looks like on Atom
+  </main>
 </body>
 
 </html>
