Added some CSS formatting

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Test title</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="container">
   <main>
-    here is where you could write some code and see what it looks like on Atom
+    <h1>here is where you could write some code and see what it looks like on Atom</h1>
   </main>
 </body>
 
